handle add to cart

--- a/src/app/product-card/product-card.component.html
+++ b/src/app/product-card/product-card.component.html
@@ -1,5 +1,26 @@
 <div class="product-card">
   <div class="product-card__image" routerLink="/product/{{ id }}">
+    <img src="{{ image[0] }}" alt="" />
+  </div>
+  <div class="product-card__info">
+    <header style="flex-direction: column">
+      <div class="title">
+        <div class="product-name">{{ title }}</div>
+        <div class="product-short-desc">{{ short_desc }}</div>
+      </div>
+      <div class="product-price">{{ price | currency : "VND" }}</div>
+    </header>
+  </div>
+  <div class="product-card__cta">
+    <button nz-button [disabled]="quantity === 0" (click)="addToCart()">
+      {{ quantity === 0 ? "Out of stock" : "Add to cart" }}
+    </button>
+  </div>
+</div>
+
+<!-- Origin -->
+<!-- <div class="product-card">
+  <div class="product-card__image" routerLink="/product/{{ id }}">
     <img src="{{ image }}" alt="" />
   </div>
   <div class="product-card__info">
@@ -8,7 +29,7 @@
         <div class="product-name">{{ title }}</div>
         <div class="product-short-desc">{{ short_desc }}</div>
       </div>
-      <div class="product-price">{{ price | currency: "USD" }}</div>
+      <div class="product-price">{{ price | currency : "USD" }}</div>
     </header>
   </div>
   <div class="product-card__cta">
@@ -28,4 +49,4 @@
       {{ quantity === 0 ? "Out of stock" : "Add to cart" }}
     </button>
   </div>
-</div>
+</div> -->
