--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,19 +4,6 @@
     <div class="categories__header">
       <h2>Categories</h2>
     </div>
-    <!-- <div class="categories__list">
-      <swiper
-        [zoom]="false"
-        [slidesPerView]="screenWidth > 1200 ? 4 : 1"
-        [spaceBetween]="50"
-        [pagination]="true"
-        [loop]="true"
-      >
-        <ng-template swiperSlide *ngFor="let c of categories">
-          <div class="category-card">{{ c.name }}</div>
-        </ng-template>
-      </swiper>
-    </div> -->
     <div class="Items">
       <div class="Item" *ngFor="let c of categories">
         <a href="" class="Item__link">
@@ -28,6 +15,36 @@
 
   <!-- Product -->
   <div class="products">
+    <div class="products__header">
+      <h2>Recommend</h2>
+    </div>
+    <div *ngIf="loading" class="products__loading">
+      <ng-template #indicatorTemplate>
+        <i
+          nz-icon
+          nzType="loading"
+          [ngStyle]="{ 'font-size': '2rem', margin: '0 auto' }"
+        ></i>
+      </ng-template>
+      <nz-spin nzSimple [nzIndicator]="indicatorTemplate"> </nz-spin>
+    </div>
+    <div class="products__list" *ngIf="!loading">
+      <app-product-card
+        *ngFor="let n of products"
+        [id]="n.productId"
+        [title]="n.productName"
+        [image]="n.listImage"
+        [price]="n.price"
+        [short_desc]="n.detail"
+        [category]="n.categoryName"
+        [quantity]="n.quantity"
+      >
+      </app-product-card>
+    </div>
+  </div>
+
+  <!-- Origin -->
+  <!-- <div class="products">
     <div class="products__header">
       <h2>New Products</h2>
     </div>
@@ -55,8 +72,9 @@
       >
       </app-product-card>
     </div>
-  </div>
-  <div class="load-products">
+  </div> -->
+
+  <div class="load-products" *ngIf="pageNumber + 1 < total">
     <button
       nz-button
       (click)="showMoreProducts()"
