--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -10,33 +10,6 @@
         font-size: 1.75rem;
       }
     }
-    &__list {
-      .swiper-pagination {
-        display: none;
-      }
-      // just for categories
-      .swiper-pagination-bullet-active {
-        background-color: #fff;
-      }
-      .category-card {
-        height: 70px;
-        border-radius: 40px;
-
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        // border-radius: 3px;
-        font-size: 1.375rem;
-        letter-spacing: 5px;
-        font-weight: 500;
-        text-transform: uppercase;
-        color: #fff;
-        background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-        background-size: 400% 400%;
-        animation: gradient 15s ease infinite;
-        cursor: pointer;
-      }
-    }
   }
   .products {
     margin: 0 auto;
@@ -81,11 +54,6 @@
     .categories {
       max-width: calc(700px + 72px); // width of cards + all padding + gap
       padding: 36px 24px;
-      &__list {
-        .category-card {
-          height: 100px;
-        }
-      }
     }
     .products {
       max-width: calc(700px + 72px); // width of cards + all padding + gap
@@ -95,7 +63,7 @@
       }
       &__list {
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
         column-gap: 24px;
         row-gap: 24px;
       }
@@ -108,11 +76,6 @@
     .categories {
       max-width: calc(1050px + 96px); // width of cards + all padding + gap
       padding: 50px 24px;
-      &__list {
-        .category-card {
-          // width: 348px;
-        }
-      }
     }
     .products {
       max-width: calc(1050px + 96px); // width of cards + all padding + gap
@@ -122,7 +85,7 @@
       }
       &__list {
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
       }
     }
   }
@@ -147,6 +110,8 @@
   width: 100%;
   max-width: 1200px;
   margin: 0 auto;
+  overflow-y: auto;
+  // height: 200px;
 }
 .Item {
   display: flex;
@@ -154,16 +119,23 @@
   align-items: center;
   background-color: #ccc;
   border-radius: 20px;
-  margin: 10px 15px;
-  padding: 15px 0;
-  width: 10%;
-  transition: box-shadow, 0.4s, ease-in-out;
+  margin: 10px 10px;
+  padding: 15px 20px;
+  width: 22%;
+
+  transition: all 0.3s;
   cursor: pointer;
+}
+.Item:hover {
+  background-color: #555;
+}
+.Item:hover .Item__title {
+  color: #fff;
 }
 @media (max-width: 1050px) {
   background #fff,
   .Item {
-    width: 48%;
+    // width: 48%;
   }
 }
 @media (max-width: 600px) {
@@ -179,23 +151,9 @@
 .Item__title {
   text-align: center;
   font-family: "Montserrat", sans-serif;
-  font-size: 0.9em;
+  // font-size: 0.9em;
   color: #555;
   width: 100%;
-  // margin: 20px auto 0;
-}
-.Item__price {
-  text-align: center;
-  font-family: "Montserrat", sans-serif;
-  font-size: 0.9em;
-  margin-top: 10px;
-  color: #777;
-}
-.ImageContainer {
-  width: 100%;
-  height: auto;
-}
-.Image {
-  width: 100%;
-  height: auto;
+  font-size: 14px;
+  font-weight: 700;
 }
