--- a/src/app/product-card/product-card.component.scss
+++ b/src/app/product-card/product-card.component.scss
@@ -6,8 +6,11 @@
   transition: all 0.2s;
   overflow: hidden;
   &__image {
+    width: 100%;
+    height: 260px;
     > img {
       width: 100%;
+      height: 100%;
       object-fit: cover;
       border-bottom: 1px solid #ccc;
     }
@@ -32,6 +35,7 @@
         }
       }
       .product-price {
+        margin-top: 20px;
         font-size: 1.375rem;
         font-weight: 600;
       }
@@ -45,15 +49,19 @@
       background-color: #fff;
       border-top: 1px solid #ccc;
       cursor: pointer;
-      transition: background-color 0.2s;
+      transition: all 0.4s;
     }
   }
 }
-
+.product-card__cta button:hover {
+  background-color: #555;
+  color: #fff;
+}
 @media screen and (min-width: 1024px) {
   .product-card {
     &:hover {
-      transform: scale(1.0125);
+      transform: translateY(-10px);
+      // border: 3px solid #555;
     }
   }
 }
