update banner home page

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -5,8 +5,10 @@
       <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
         <!-- <img src="img/logo.png" alt="" width="180" class="mb-3" /> -->
         <p class="font-italic text-muted">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-          eiusmod tempor incididunt.
+          Địa chỉ trụ sở doanh nghiệp: Tầng 26, Tòa nhà Trụ Sở Điều Hành Và
+          Trung Tâm Thương Mại Viettel, 285 Cách Mạng Tháng Tám, Phường 12, Quận
+          10, Thành phố Hồ Chí Minh Để được giải đáp thắc mắc, vui lòng truy cập
+          trang FAQ/Trợ giúp Giờ làm việc: 9:00 - 18:00 (Thứ Hai - Chủ Nhật)
         </p>
         <ul class="list-inline mt-4">
           <li class="list-inline-item">
