--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,61 @@
 <div class="home-container">
+  <!-- Banner -->
+  <div
+    id="myCarousel"
+    class="carousel slide carousel-fade"
+    data-ride="carousel"
+    [ngStyle]="{
+      'background-image': 'url(' + banner[slideIndex].imgsource + ')'
+    }"
+  >
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <div class="mask flex-center">
+          <div class="container">
+            <div class="row align-items-center">
+              <div
+                style="
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: center;
+                  align-items: center;
+                "
+                class="col-12 order-md-1 order-2"
+              >
+                <h4>{{ banner[slideIndex].title }}</h4>
+                <p style="color: #fff">
+                  {{ banner[slideIndex].detail }}
+                </p>
+                <br />
+                <a href="#">BUY NOW</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <a
+      class="carousel-control-prev"
+      role="button"
+      data-slide="prev"
+      style="margin-left: 50px"
+      (click)="prevSlide()"
+    >
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a
+      class="carousel-control-next"
+      role="button"
+      data-slide="next"
+      style="margin-right: 50px"
+      (click)="nextSlide()"
+    >
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+
   <!-- Categories -->
   <div class="categories">
     <div class="categories__header">
@@ -42,37 +99,6 @@
       </app-product-card>
     </div>
   </div>
-
-  <!-- Origin -->
-  <!-- <div class="products">
-    <div class="products__header">
-      <h2>New Products</h2>
-    </div>
-    <div *ngIf="loading" class="products__loading">
-      <ng-template #indicatorTemplate>
-        <i
-          nz-icon
-          nzType="loading"
-          [ngStyle]="{ 'font-size': '2rem', margin: '0 auto' }"
-        ></i>
-      </ng-template>
-      <nz-spin nzSimple [nzIndicator]="indicatorTemplate"> </nz-spin>
-    </div>
-    <div class="products__list" *ngIf="!loading">
-      <app-product-card
-        *ngFor="let n of products"
-        [id]="n.id"
-        [title]="n.title"
-        [image]="n.image"
-        [price]="n.price"
-        [short_desc]="n.short_desc"
-        [category]="n.category"
-        [quantity]="n.quantity"
-        [onAdd]="cartService.addProduct.bind(cartService)"
-      >
-      </app-product-card>
-    </div>
-  </div> -->
 
   <div class="load-products" *ngIf="pageNumber + 1 < total">
     <button
