--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,4 +1,4 @@
-<div class="profile-container">
+<!-- <div class="profile-container">
   <div class="form-container">
     <h2>Profile</h2>
     <nz-alert
@@ -20,6 +20,54 @@
         />
       </div>
       <div class="cta-container">
+        <button
+          nz-button
+          type="submit"
+          [nzLoading]="loading"
+          [disabled]="canUpdate()"
+        >
+          Update
+        </button>
+      </div>
+    </form>
+  </div>
+</div> -->
+
+<div
+  class="wrapper"
+  style="background-image: url('../../../../assets/bg-registration-form-1.jpg')"
+>
+  <nz-alert
+    [nzType]="alertType"
+    nzShowIcon
+    [nzMessage]="alertMessage"
+    [ngStyle]="{ marginBottom: '12px' }"
+    *ngIf="alertVisible"
+  ></nz-alert>
+  <div class="inner">
+    <div class="image-holder">
+      <img
+        style="width: 100%; height: 100%; object-fit: cover"
+        src="../../../../assets/Register.jpg"
+        alt=""
+      />
+    </div>
+    <form (ngSubmit)="onSubmit()">
+      <h3>Profile</h3>
+      <div class="form-wrapper" *ngFor="let field of user">
+        <label style="font-weight: 900" for="field.key">{{
+          field.label
+        }}</label>
+        <input
+          class="form-control"
+          nz-input
+          [name]="field.key"
+          [type]="field.type"
+          [(value)]="field.value"
+          [(ngModel)]="field.value"
+        />
+      </div>
+      <div class="form-wrapper">
         <button
           nz-button
           type="submit"
