--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -119,7 +119,7 @@
     display: flex;
     flex-direction: row;
     max-width: 1024px;
-    margin: 104px auto 0;
+    margin: 104px auto 70px;
     border: 1px solid #ccc;
     border-radius: 3px;
     &__empty {
