--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -94,7 +94,7 @@ a:hover {
   padding: 20px;
   background: #fff;
   max-width: 850px;
-  margin: auto;
+  margin: 80px auto;
   display: flex;
   .image-holder {
     width: 50%;
