--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -56,7 +56,7 @@
         </button>
       </div>
       <div class="form-group mt-30 j-between">
-        <a class="navigate-link" href="">Forgot password?</a>
+        <a class="navigate-link" (click)="checkEmail()">Forgot password?</a>
         <a class="navigate-link" routerLink="/register">Create a new account</a>
       </div>
     </form>
