--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -53,7 +53,7 @@
           name="province"
         >
           <option
-            *ngFor="let province of province"
+            *ngFor="let province of provinces"
             [value]="province.ProvinceID"
           >
             {{ province.ProvinceName }}
@@ -62,7 +62,7 @@
       </div>
 
       <!-- City -->
-      <div class="form-wrapper">
+      <div class="form-wrapper" *ngIf="cities">
         <select
           [(ngModel)]="selectedCity"
           class="form-control"
@@ -76,14 +76,14 @@
       </div>
 
       <!-- Ward -->
-      <div class="form-wrapper">
+      <div class="form-wrapper" *ngIf="wards">
         <select
           [(ngModel)]="selectedWard"
           class="form-control"
-          (change)="onCityChange()"
           name="wards"
+          (change)="onWardChange()"
         >
-          <option *ngFor="let ward of wards" [value]="ward.DistrictID">
+          <option *ngFor="let ward of wards" [value]="ward.WardCode">
             {{ ward.WardName }}
           </option>
         </select>
