--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -47,12 +47,17 @@
         <h3>Total items</h3>
         <h2>{{ total }}</h2>
       </span>
+      <span style="margin-top: 15px">
+        <p style="margin-bottom: 0">
+          {{ nameLocal }}
+        </p>
+      </span>
     </div>
     <div class="cta">
       <button
         nz-button
         nzType="primary"
-        routerLink="/checkout"
+        (click)="checkoutItem()"
         [disabled]="total === 0"
       >
         Checkout
