--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -1,4 +1,4 @@
-<div class="checkout-container">
+<!-- <div class="checkout-container">
   <div class="progress-container">
     <nz-progress
       [nzPercent]="getProgressPrecent()"
@@ -7,7 +7,7 @@
     ></nz-progress>
   </div>
 
-  <!-- FIRST STEP -->
+
   <div *ngIf="currentStep === 1">
     <div class="billing-container">
       <h2>Billing Address</h2>
@@ -36,7 +36,7 @@
       </button>
     </div>
   </div>
-  <!-- SECOND STEP -->
+
   <div *ngIf="currentStep === 2">
     <div class="payment-container">
       <h2>Payment Details</h2>
@@ -97,7 +97,7 @@
       </button>
     </div>
   </div>
-  <!-- THIRD STEP -->
+
   <div *ngIf="currentStep === 3">
     <div class="summary-container">
       <div class="summary-container__order">
@@ -137,7 +137,7 @@
       </div>
     </div>
   </div>
-  <!-- LAST STEP - THANK YOU -->
+
   <div *ngIf="currentStep === 4">
     <div class="confirmation-container">
       <header>
@@ -171,4 +171,4 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
