--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -22,6 +22,23 @@
       style="width: 120px; height: 100%; object-fit: cover; cursor: pointer"
       alt="Eccom"
     />
+    <nz-input-group
+      style="width: 30%"
+      nzSearch
+      [nzAddOnAfter]="suffixIconButton"
+    >
+      <input
+        [(ngModel)]="keyWord"
+        type="text"
+        nz-input
+        placeholder="Search product"
+      />
+    </nz-input-group>
+    <ng-template #suffixIconButton>
+      <button (click)="searchData()" nz-button nzType="primary" nzSearch>
+        <span nz-icon nzType="search"></span>
+      </button>
+    </ng-template>
   </div>
   <div class="header-container__right">
     <ng-container>
@@ -50,7 +67,7 @@
 
 <div [className]="isMenuOpen ? 'side-menu show' : 'side-menu'">
   <div class="side-menu__content">
-    <h2 routerLink="/" (click)="toggleMenu()">Eccom</h2>
+    <h2 routerLink="/" (click)="toggleMenu()">Menu</h2>
     <nav>
       <ul>
         <li routerLink="/" (click)="toggleMenu()">Home</li>
