--- a/src/app/order-history/order-history.component.html
+++ b/src/app/order-history/order-history.component.html
@@ -4,176 +4,36 @@
   style="background-image: url('../../../../assets/bg-registration-form-1.jpg')"
 >
   <section class="table__header">
-    <h1>Customer's Orders</h1>
-    <div class="input-group">
-      <h1>Total amount</h1>
-    </div>
-    <div class="export__file">
-      <label
-        for="export-file"
-        class="export__file-btn"
-        title="Export File"
-      ></label>
-      <input type="checkbox" id="export-file" />
-      <div class="export__file-options">
-        <label>Export As &nbsp; &#10140;</label>
-        <label for="export-file" id="toPDF"
-          >PDF <img src="images/pdf.png" alt=""
-        /></label>
-        <label for="export-file" id="toJSON"
-          >JSON <img src="images/json.png" alt=""
-        /></label>
-        <label for="export-file" id="toCSV"
-          >CSV <img src="images/csv.png" alt=""
-        /></label>
-        <label for="export-file" id="toEXCEL"
-          >EXCEL <img src="images/excel.png" alt=""
-        /></label>
-      </div>
-    </div>
+    <h1>History Orders</h1>
   </section>
   <section class="table__body">
     <table>
       <thead>
         <tr>
-          <th>Id <span class="icon-arrow"></span></th>
-          <th>Customer <span class="icon-arrow"></span></th>
+          <th>No</th>
+          <!-- <th>Customer <span class="icon-arrow"></span></th> -->
           <th>Location <span class="icon-arrow"></span></th>
-          <th>Order Date <span class="icon-arrow"></span></th>
-          <th>Status <span class="icon-arrow"></span></th>
-          <th>Amount <span class="icon-arrow"></span></th>
+          <!-- <th>Order Date <span class="icon-arrow"></span></th> -->
+          <th>Status</th>
+          <th>Amount</th>
+          <th>Action</th>
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <td>1</td>
-          <td><img src="images/Zinzu Chan Lee.jpg" alt="" />Zinzu Chan Lee</td>
-          <td>Seoul</td>
-          <td>17 Dec, 2022</td>
+        <tr *ngFor="let order of orders; index as i">
+          <td>{{ i + 1 }}</td>
+          <td>{{ order.address }}</td>
+          <td [ngClass]="order.status">{{ order.status }}</td>
           <td>
-            <p class="status delivered">Delivered</p>
+            <strong> {{ order.price | currency : "VND" }} </strong>
           </td>
-          <td><strong> $128.90 </strong></td>
-        </tr>
-        <tr>
-          <td>2</td>
-          <td><img src="images/Jeet Saru.png" alt="" /> Jeet Saru</td>
-          <td>Kathmandu</td>
-          <td>27 Aug, 2023</td>
-          <td>
-            <p class="status cancelled">Cancelled</p>
-          </td>
-          <td><strong>$5350.50</strong></td>
-        </tr>
-        <tr>
-          <td>3</td>
-          <td><img src="images/Sonal Gharti.jpg" alt="" /> Sonal Gharti</td>
-          <td>Tokyo</td>
-          <td>14 Mar, 2023</td>
-          <td>
-            <p class="status shipped">Shipped</p>
-          </td>
-          <td><strong>$210.40</strong></td>
-        </tr>
-        <tr>
-          <td>4</td>
-          <td><img src="images/Alson GC.jpg" alt="" /> Alson GC</td>
-          <td>New Delhi</td>
-          <td>25 May, 2023</td>
-          <td>
-            <p class="status delivered">Delivered</p>
-          </td>
-          <td><strong>$149.70</strong></td>
-        </tr>
-        <tr>
-          <td>5</td>
-          <td><img src="images/Sarita Limbu.jpg" alt="" /> Sarita Limbu</td>
-          <td>Paris</td>
-          <td>23 Apr, 2023</td>
-          <td>
-            <p class="status pending">Pending</p>
-          </td>
-          <td><strong>$399.99</strong></td>
-        </tr>
-        <tr>
-          <td>6</td>
-          <td><img src="images/Alex Gonley.jpg" alt="" /> Alex Gonley</td>
-          <td>London</td>
-          <td>23 Apr, 2023</td>
-          <td>
-            <p class="status cancelled">Cancelled</p>
-          </td>
-          <td><strong>$399.99</strong></td>
-        </tr>
-        <tr>
-          <td>7</td>
-          <td><img src="images/Alson GC.jpg" alt="" /> Jeet Saru</td>
-          <td>New York</td>
-          <td>20 May, 2023</td>
-          <td>
-            <p class="status delivered">Delivered</p>
-          </td>
-          <td><strong>$399.99</strong></td>
-        </tr>
-        <tr>
-          <td>8</td>
-          <td><img src="images/Sarita Limbu.jpg" alt="" /> Aayat Ali Khan</td>
-          <td>Islamabad</td>
-          <td>30 Feb, 2023</td>
-          <td>
-            <p class="status pending">Pending</p>
-          </td>
-          <td><strong>$149.70</strong></td>
-        </tr>
-        <tr>
-          <td>9</td>
-          <td><img src="images/Alex Gonley.jpg" alt="" /> Alson GC</td>
-          <td>Dhaka</td>
-          <td>22 Dec, 2023</td>
-          <td>
-            <p class="status cancelled">Cancelled</p>
-          </td>
-          <td><strong>$249.99</strong></td>
-        </tr>
-        <tr>
-          <td>9</td>
-          <td><img src="images/Alex Gonley.jpg" alt="" /> Alson GC</td>
-          <td>Dhaka</td>
-          <td>22 Dec, 2023</td>
-          <td>
-            <p class="status cancelled">Cancelled</p>
-          </td>
-          <td><strong>$249.99</strong></td>
-        </tr>
-        <tr>
-          <td>9</td>
-          <td><img src="images/Alex Gonley.jpg" alt="" /> Alson GC</td>
-          <td>Dhaka</td>
-          <td>22 Dec, 2023</td>
-          <td>
-            <p class="status cancelled">Cancelled</p>
-          </td>
-          <td><strong>$249.99</strong></td>
-        </tr>
-        <tr>
-          <td>9</td>
-          <td><img src="images/Alex Gonley.jpg" alt="" /> Alson GC</td>
-          <td>Dhaka</td>
-          <td>22 Dec, 2023</td>
-          <td>
-            <p class="status cancelled">Cancelled</p>
-          </td>
-          <td><strong>$249.99</strong></td>
-        </tr>
-        <tr>
-          <td>9</td>
-          <td><img src="images/Alex Gonley.jpg" alt="" /> Alson GC</td>
-          <td>Dhaka</td>
-          <td>22 Dec, 2023</td>
-          <td>
-            <p class="status cancelled">Cancelled</p>
-          </td>
-          <td><strong>$249.99</strong></td>
+          <button
+            class="button-29"
+            role="button"
+            (click)="cancelOrder(order.orderID, order.status)"
+          >
+            {{ order.status == "SUCCESS" ? "Cancel" : "Re-Order" }}
+          </button>
         </tr>
       </tbody>
     </table>
