--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -41,27 +41,24 @@
       <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
         <h6 class="text-uppercase font-weight-bold mb-4">Shop</h6>
         <ul class="list-unstyled mb-0">
-          <li class="mb-2"><a href="#" class="text-muted">For Women</a></li>
-          <li class="mb-2"><a href="#" class="text-muted">For Men</a></li>
-          <li class="mb-2"><a href="#" class="text-muted">Stores</a></li>
-          <li class="mb-2"><a href="#" class="text-muted">Our Blog</a></li>
+          <li class="mb-2">For Women</li>
+          <li class="mb-2">For Men</li>
+          <li class="mb-2">Stores</li>
+          <li class="mb-2">Our Blog</li>
         </ul>
       </div>
       <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
         <h6 class="text-uppercase font-weight-bold mb-4">Company</h6>
         <ul class="list-unstyled mb-0">
-          <li class="mb-2"><a href="#" class="text-muted">Login</a></li>
-          <li class="mb-2"><a href="#" class="text-muted">Register</a></li>
-          <li class="mb-2"><a href="#" class="text-muted">Wishlist</a></li>
-          <li class="mb-2"><a href="#" class="text-muted">Our Products</a></li>
+          <!-- <li class="mb-2"><a href="#" class="text-muted">Wishlist</a></li> -->
+          <li class="mb-2">
+            <a routerLink="/" class="text-muted">Our Products</a>
+          </li>
         </ul>
       </div>
       <div class="col-lg-4 col-md-6 mb-lg-0">
         <h6 class="text-uppercase font-weight-bold mb-4">Newsletter</h6>
-        <p class="text-muted mb-4">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. At itaque
-          temporibus.
-        </p>
+        <p class="text-muted mb-4">Give we your email</p>
         <div class="p-1 rounded border">
           <div class="input-group">
             <input
