--- a/src/app/product/product.component.scss
+++ b/src/app/product/product.component.scss
@@ -1,105 +1,3 @@
-// .product-container {
-//   padding-bottom: 60px;
-//   &__image {
-//     margin-bottom: 24px;
-//     text-align: center;
-//   }
-//   &__details {
-//     margin: 0 auto;
-//     max-width: 1024px;
-//     padding: 16px;
-//     .title {
-//       font-size: 1.5rem;
-//       line-height: 1.25;
-//       margin-bottom: 6px;
-//     }
-//     .reviews {
-//       display: flex;
-//       align-items: center;
-//       margin-bottom: 4px;
-//       .rating {
-//         margin-right: 12px;
-//         > i {
-//           margin-right: 2px;
-//           font-size: 1rem;
-//           color: #aaa;
-//           cursor: pointer;
-//           &:nth-child(n + 1):nth-child(-n + 4) {
-//             color: #f9d71c;
-//           }
-//         }
-//       }
-//       .review-link {
-//         color: #525252;
-//         font-size: 0.75rem;
-//       }
-//     }
-//     .price-container {
-//       display: flex;
-//       align-items: center;
-//       margin-bottom: 12px;
-//       .price {
-//         font-size: 1.75rem;
-//         margin-right: 12px;
-//       }
-//       .availability {
-//         font-size: 1rem;
-//         text-transform: uppercase;
-//       }
-//     }
-//     .description {
-//       margin-bottom: 20px;
-//     }
-//     .cta {
-//       .add-to-cart {
-//         display: flex;
-//         align-items: center;
-//         margin-bottom: 40px;
-//         > span {
-//           margin-right: 4px;
-//         }
-//         > button {
-//           height: 46px;
-//           margin-left: 12px;
-//           border-radius: 50px;
-//         }
-//       }
-//       .category {
-//         text-transform: uppercase;
-//         margin-bottom: 16px;
-//         > span {
-//           margin-right: 6px;
-//         }
-//       }
-//       .social-links {
-//         text-transform: uppercase;
-//         > span {
-//           margin-right: 6px;
-//         }
-//         > i {
-//           font-size: 1rem;
-//           margin: 0 8px;
-//           cursor: pointer;
-//           transition: color 0.2s;
-//           &:hover {
-//             color: #1890ff;
-//           }
-//         }
-//       }
-//     }
-//   }
-// }
-
-// @media screen and (min-width: 1200px) {
-//   .product-container {
-//     padding-bottom: 60px;
-//     &__image {
-//       margin-bottom: 24px;
-//       text-align: center;
-//     }
-//   }
-// }
-
 .card-wrapper {
   max-width: 1100px;
   margin: 100px auto;
@@ -302,4 +200,164 @@ img {
   .product-content {
     padding-top: 0;
   }
+}
+
+.home-container {
+  padding-top: 60px;
+  .categories {
+    margin: 0 auto;
+    padding: 24px 16px;
+    max-width: calc(350px + 32px); // width of cards + all padding + gap
+    &__header {
+      margin-bottom: 16px;
+      > h2 {
+        font-size: 1.75rem;
+      }
+    }
+  }
+  .products {
+    margin: 0 auto;
+    padding: 24px 16px;
+    max-width: calc(350px + 32px); // width of cards + all padding + gap
+    &__loading {
+      text-align: center;
+    }
+    &__header {
+      margin-bottom: 16px;
+      > h2 {
+        font-size: 1.75rem;
+      }
+    }
+    &__list {
+      display: grid;
+      grid-template-columns: 1fr;
+      row-gap: 24px;
+      .product-card {
+        height: 100%;
+        max-width: 350px;
+        margin: 0 auto;
+        &__image {
+          cursor: pointer;
+        }
+      }
+    }
+  }
+  .load-products {
+    text-align: center;
+    padding: 16px 16px 32px;
+    > button {
+      max-width: 341px;
+      height: 44px;
+      width: 100%;
+    }
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .home-container {
+    .categories {
+      max-width: calc(700px + 72px); // width of cards + all padding + gap
+      padding: 36px 24px;
+    }
+    .products {
+      max-width: calc(700px + 72px); // width of cards + all padding + gap
+      padding: 36px 24px;
+      &__header {
+        margin-bottom: 16px;
+      }
+      &__list {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        column-gap: 24px;
+        row-gap: 24px;
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .home-container {
+    .categories {
+      max-width: calc(1050px + 96px); // width of cards + all padding + gap
+      padding: 50px 24px;
+    }
+    .products {
+      max-width: calc(1050px + 96px); // width of cards + all padding + gap
+      padding: 36px 24px;
+      &__header {
+        margin-bottom: 16px;
+      }
+      &__list {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+      }
+    }
+  }
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.Items {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  overflow-y: auto;
+  // height: 200px;
+}
+.Item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #ccc;
+  border-radius: 20px;
+  margin: 10px 10px;
+  padding: 15px 20px;
+  width: 22%;
+
+  transition: all 0.3s;
+  cursor: pointer;
+}
+.Item:hover {
+  background-color: #555;
+}
+.Item:hover .Item__title {
+  color: #fff;
+}
+@media (max-width: 1050px) {
+  background #fff,
+  .Item {
+    // width: 48%;
+  }
+}
+@media (max-width: 600px) {
+  background #fff,
+  .Item {
+    width: 100%;
+  }
+}
+
+.Item__link {
+  text-decoration: none;
+}
+.Item__title {
+  text-align: center;
+  font-family: "Montserrat", sans-serif;
+  // font-size: 0.9em;
+  color: #555;
+  width: 100%;
+  font-size: 14px;
+  font-weight: 700;
 }
